# zed-wakatime

./: Cargo.toml  extension.toml  vscode_wakatime_inspect.ipynb
src/: lib.rs
wakatime-ls/src/: main.rs
